# Delft-FIAT

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE.txt  README.md  SETUP.md  make_env.py  pixi.toml  pyproject.toml  sonar-project.properties
.archive/: bin.manifest
.archive/ui_fiat/: ui_fiat.cpp  ui_fiat.ui  ui_fiat.vcxproj
.build/: build.spec  build_yml.py  check_fiat.bat  fiat_installer.iss  hook-fiat.py  linux64.sh  linux64.spec  linux64_build_env.sh  pybuild_debug.spec  runtime_hooks.py  setup_gdal.sh  win64.bat  win64.spec  win64_d.bat  win64_d.spec
.build/core/: check_fiat.bat  linux64.spec  pybuild.bat  pybuild.spec  pybuild_debug.bat  pybuild_debug.spec  runtime_hooks.py  win64.bat
.build/gui/: delft_fiat.exe.manifest
.data/: create_test_data.py  settings.toml
.data/exposure/: spatial.csv  spatial.gpkg
.data/hazard/: event_map.nc
.docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  make.bat
.docs/examples/: geom_model.ipynb
.docs/getting_started/: intro.rst
.docs/setup_guide/: intro.rst
.docs/source/: changelog.rst  conf.py  index.rst
.docs/source/_static/: theme-deltares.css
.docs/source/api/: gis.rst  index.rst
.docs/source/getting_started/: index.rst
.docs/source/setup_guide/: index.rst
.docs/source/setup_guide/compile/: index.rst
.docs/source/setup_guide/install/: index.rst
.docs/source/user_guide/: index.rst
.docs/source/user_guide/data/: data_conv.rst  data_overview.rst  data_prep.rst  index.rst
.docs/source/user_guide/execution/: cmd_ui.rst  index.rst
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugs.yaml  config.yaml  config.yml  documentation.yaml  feature_request.yaml
.github/workflows/: build.yml  cache.yml  docker.yml  docs.yml  linting.yml  publish.yml  purge_cache.yml  sonar.yml  test.yml  tests.yml  version.yml
.testdata/: create_test_data.py  settings.toml  settings_2g.toml  settings_risk.toml  settings_risk_2g.toml
.testdata/exposure/: spatial.csv  spatial.gpkg  spatial.nc  spatial2.gpkg
.testdata/hazard/: event_map.nc  risk_map.nc  risk_map.nc.aux.xml  risk_map.tif
.testdata/vulnerability/: vulnerability_curves.csv
docs/: .gitignore  PDF_Documentation.qmd  _quarto.yml  add_packages.ps1  api.py  changelog.qmd  changelog.rst  index.qmd  references.bib
docs/.archive/: active.js  populate.js  switcher.js
docs/_extensions/quarto-ext/fontawesome/: fontawesome.lua
docs/_scripts/: add_packages.sh  api.py  inv.py
docs/_static/: listing_code.html  theme-dark.scss  theme-light.scss
docs/developments/: changelog.qmd  env.qmd  guide.qmd  index.qmd  roadmap.qmd
docs/examples/: index.qmd  single_event.ipynb
docs/getting_started/: faq.qmd  index.qmd
docs/info/: index.qmd
docs/intro/: case_studies.qmd  publications.qmd  references.bib  test.qmd
docs/setup_guide/: index.qmd
docs/setup_guide/general/: conda.qmd  docker.qmd
docs/setup_guide/kernel/: application.qmd  build.qmd  dev.qmd  install.qmd  installation.qmd  linux.qmd
docs/user_guide/: advanced.qmd  index.qmd  models.qmd
docs/user_guide/data/: exposure.qmd  folder_structure.ipynb  folder_structure.qmd  hazard.qmd  hazard_maps.qmd  index.qmd  settings.qmd  supported.qmd  vulnerability.qmd  vulnerability_curves.csv
docs/user_guide/data/exposure/: csv.qmd  data.qmd  geometries.qmd
docs/user_guide/options/: model_options.qmd
docs/user_guide/settings/: computation.qmd  index.qmd  optional.qmd
envs/: fiat_build.yml  fiat_dev.yml  fiat_test.yml
examples/: settings.toml
res/: terms_of_agreement.rtf
src/: ui_fiat.sln
src/delft_fiat/: __init__.py  cfg.py  check.py  error.py  io.py  log.py  main.py  parsing.py  util.py  version.py
src/delft_fiat/cli/: main.py  util.py
src/delft_fiat/cy/: cy.pyx
src/delft_fiat/gis/: __init__.py  crs.py  geom.py  grid.py  overlay.py  raster.py  util.py  vector.py
src/delft_fiat/gui/: widgets.py
src/delft_fiat/models/: __init__.py  base.py  calc.py  geom.py  grid.py  util.py
src/delft_fiat/reader/: cfg.py  check.py  util.py
src/fiat/: __init__.py  cfg.py  check.py  error.py  io.py  log.py  main.py  util.py  version.py
src/fiat/cli/: formatter.py  main.py  main_old.py  util.py
src/fiat/gis/: crs.py  geom.py  grid.py  overlay.py  util.py
src/fiat/gui/: main.py
src/fiat/models/: base.py  calc.py  geom.py  grid.py  util.py  worker.py  worker_geom.py
src/ui_fiat/: main.cpp  ui_fiat.h  ui_fiat.qrc  ui_fiat.rc  ui_fiat.vcxproj  ui_fiat.vcxproj.filters
src/ui_fiat/x64/Debug/moc/: moc_ui_fiat.cpp
src/ui_fiat/x64/Debug/qmake/: qtvars_x64_Debug.props
src/ui_fiat/x64/Debug/qmake/temp/: 9BE53785-E2E9-46D8-A9B8-08DEBFE40B30.ui_fiat.designtime.idx  props.txt  qtvars.vcxproj
src/ui_fiat/x64/Debug/rcc/: qrc_ui_fiat.cpp
src/ui_fiat/x64/Debug/ui_fiat.tlog/: moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  ui_fiat.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
src/ui_fiat/x64/Debug/uic/: ui_ui_fiat.h
test/: conftest.py  test_checks.py  test_cli.py  test_config.py  test_gis.py  test_io.py  test_log.py  test_logic.py  test_model.py  test_risk_calculation.py  test_risk_calculator.py  test_struct.py  test_worker.py
