[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["delft_fiat"]

[tool.setuptools.dynamic]
version = {attr = "delft_fiat.version.__version__"}

[project]
name = "delft_fiat"
dynamic = ['version']

authors = [
    {name = "B.W. Dalmijn", email = "brencodeert@outlook.com"},
    {name = "F.C. de Groen", email = "frederique.degroen@deltares.nl"}
]
maintainers = [
    {name = "B.W. Dalmijn", email = "brencodeert@outlook.com"},
]

description = "Delft Fast Impact Assessment Tool"
readme = "README.md"
license = {text = "MIT"}

requires-python = ">=3.7" 
dependencies = [
"click",
"gdal>=3.5",
"numpy",
"regex",
"tomli",
]

keywords = ["FIAT", "Assessment", "Damage"]
classifiers = [
# How mature is this project? Common values are
#   3 - Alpha
#   4 - Beta
#   5 - Production/Stable
'Development Status :: 3 - Alpha',

# Indicate who your project is intended for
'Intended Audience :: End Users/Desktop',
'Intended Audience :: Developers',
'Intended Audience :: Science/Research',

# Topic of the package
'Topic :: Scientific/Engineering :: Hydrology',
'Topic :: Scientific/Engineering :: GIS',

# Pick your license as you wish (should match "license" above)
'License :: OSI Approved :: MIT License',

# Language
'Natural Language :: English',

# OS
'Operating System :: OS Independent',

# Specify the Python versions you support here. In particular, ensure
# that you indicate whether you support Python 2, Python 3 or both.
'Programming Language :: Python :: 3',
'Programming Language :: Python :: 3.7',
'Programming Language :: Python :: 3.8',
'Programming Language :: Python :: 3.9',
'Programming Language :: Python :: 3.10',
'Programming Language :: Python :: 3.11',
]

[project.optional-dependencies] # Optional
all = [
    "cython",
    "setuptools>=61.0.0",
]
build = [
    "GDAL @ https://github.com/cgohlke/geospatial-wheels/releases/download/v2023.4.22/GDAL-3.6.4-cp311-cp311-win_amd64.whl",
    "pyinstaller",
]
dev = [
    "pyside2",
    "tomli-w",
]
docs = [
    "m2r2",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx_design",
    "sphinx_autosummary_accessors",
]
test = [
    "black",
	"pytest>=2.7.3",
	"pytest-cov",
    "pytest-mock",
	"responses",
]

[project.urls]
"Homepage" = "https://github.com/Deltares/Delft-FIAT"
"Bug Reports" = "https://github.com/Deltares/Delft-FIAT/issues"
"Source" =  "https://github.com/Deltares/Delft-FIAT"

[project.scripts]
fiat = "delft_fiat.cli.main:main"